Use Dockerfile config from dockerdocs

--- a/Dockerfile.rails
+++ b/Dockerfile.rails
@@ -1,18 +1,18 @@
 # Dockerfile.rails
+# syntax=docker/dockerfile:1
 FROM ruby:2.7.2 AS rails-toolbox
 
-ARG USER_ID
-ARG GROUP_ID
+RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
+WORKDIR /myapp
+COPY Gemfile /myapp/Gemfile
+COPY Gemfile.lock /myapp/Gemfile.lock
+RUN bundle install
 
-RUN addgroup --gid $GROUP_ID user
-RUN adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID user
+# Add a script to be executed every time the container starts.
+COPY entrypoint.sh /usr/bin/
+RUN chmod +x /usr/bin/entrypoint.sh
+ENTRYPOINT ["entrypoint.sh"]
+EXPOSE 5000
 
-ENV INSTALL_PATH /opt/app
-RUN mkdir -p $INSTALL_PATH
-
-RUN gem install rails bundler
-RUN chown -R user:user $INSTALL_PATH
-WORKDIR $INSTALL_PATH
-
-USER $USER_ID
-CMD ["/bin/sh"]
+# Configure the main process to run when running the image
+CMD ["rails", "server", "-b", "0.0.0.0"]
